tests/type-errors/08-condition-not-bool.flt
// If condition must be bool
// --- Command: dotnet run --project FunLang -- --emit-type %input 2>&1
// --- ExitCode: 1
// --- Input:
if 1 then 2 else 3
// --- Output:
TypeError: Cannot unify int with bool
